# x86_operating_system

./: .gitignore
01_bare_metal_boot_setup/source/: os.c
01_bare_metal_boot_setup_1/: CMakeLists.txt
01_bare_metal_boot_setup_1/cmake/: x86_64-elf-gcc.cmake
01_bare_metal_boot_setup_1/source/: start.S
01_bare_metal_boot_setup_2/: README.md
01_bare_metal_boot_setup_2/source/: start.S
01a_linker_address_mismatch/: Makefile  os.lds
01a_linker_address_mismatch/source/: start.S
01ab_linker_address_mismatch/: README.md
01ab_linker_address_mismatch/script/: qemu-debug-osx.sh
01ab_linker_address_mismatch/source/: os.h
02a_load_remain_portion/source/: start.S
02b_load_remain_portion/: README.md
03_launch_paging_system/source/: os.c  os.h  start.S
